--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.1",
     "mongoose": "^8.8.3",
     "next": "15.0.3",
+    "next-auth": "^4.24.10",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
