--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/next-auth": "^3.13.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.21.1",
     "mongoose": "^8.8.3",
