--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/next-auth": "^3.13.0",
+    "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
     "express": "^4.21.1",
     "mongoose": "^8.8.3",
