--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
     "express": "^4.21.1",
+    "firebase": "^11.1.0",
     "mongoose": "^8.8.3",
     "next": "15.0.3",
-    "next-auth": "^4.24.10",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "next-auth": "^4.24.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
