--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/react": "^1.1.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/next-auth": "^3.13.0",
     "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
+    "draft-js": "^0.11.7",
+    "emoji-mart": "^5.6.0",
     "express": "^4.21.1",
     "firebase": "^11.1.0",
     "mongoose": "^8.8.3",
@@ -24,6 +27,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
